<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#0F0F0F"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/tvSignedInAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signed_in"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_green"
        android:text="Continue to App"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:backgroundTint="@color/primary_green"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_profile"
        android:backgroundTint="@color/primary_green"
        android:layout_marginTop="12dp" />
</LinearLayout>
